--- a/assets/main.css
+++ b/assets/main.css
@@ -45,6 +45,12 @@ body {
     font-size: var(--serif-size);
 }
 
+main {
+    max-width: 60em;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 code,
 code-block,
 pre,
@@ -134,6 +140,15 @@ code-block .comtext {
     font-size: calc(var(--serif-size) * 0.85);
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    position: relative;
+}
+
 .para {
     cursor: pointer;
     font-weight: normal;
@@ -142,7 +157,7 @@ code-block .comtext {
     opacity: 0.25;
 
     position: absolute;
-    left: 0.5rem;
+    left: -2rem;
 }
 
 .para:hover,
