--- a/assets/main.css
+++ b/assets/main.css
@@ -33,6 +33,8 @@
 html {
     margin: 0;
     width: 100%;
+    font-family: var(--serif-family);
+    font-size: var(--serif-size);
 }
 
 body {
@@ -41,12 +43,10 @@ body {
     margin: var(--margin);
     width: calc(100% - var(--margin) * 2);
     box-sizing: border-box;
-    font-family: var(--serif-family);
-    font-size: var(--serif-size);
 }
 
 main {
-    max-width: 60em;
+    max-width: 60rem;
     margin-left: auto;
     margin-right: auto;
 }
