--- a/assets/main.css
+++ b/assets/main.css
@@ -15,6 +15,7 @@
     --light-ins-color: #17752d;
     --light-ins-background-color: #e4faea;
     --light-para-color: rgb(10, 73, 136);
+    --light-mark-background-color: #ffff85;
 
     --dark-background-color: #202020;
     --dark-deep-background-color: #1a1a1a;
@@ -28,6 +29,8 @@
     --dark-a-color: #5bc0ff;
     --dark-a-visited-color: #c6a8ff;
     --dark-a-hover-color: #afd7ff;
+    --dark-mark-color: #ededa8;
+    --dark-mark-background-color: #525230;
 }
 
 html {
@@ -151,6 +154,16 @@ code-block .comtext {
     font-size: calc(var(--serif-size) * 0.85);
 }
 
+kbd {
+    font-size: var(--sans-serif-size);
+    font-family: var(--sans-serif-family);
+
+    display: inline-block;
+    padding: 0 0.25em 0.15em 0.25em;
+    border-radius: 0.25em;
+    white-space: nowrap;
+}
+
 h1,
 h2,
 h3,
@@ -225,6 +238,21 @@ html:not(.dark) del-lines {
     background-color: var(--light-del-background-color);
 }
 
+html:not(.dark) kbd {
+    background-color: var(--light-deep-background-color);
+    border: 1px solid var(--light-border-color);
+}
+
+html:not(.dark) mark {
+    background-color: var(--light-mark-background-color);
+}
+
+html:not(.dark) kbd {
+    background-color: var(--light-deep-background-color);
+    border: 1px solid var(--light-border-color);
+    box-shadow: inset 0 -0.1em 0 var(--light-border-color);
+}
+
 /* END LIGHT THEME */
 /* BEGIN DARK THEME */
 
@@ -268,6 +296,17 @@ html.dark ins-lines {
     color: var(--dark-ins-color);
 }
 
+html.dark mark {
+    color: var(--dark-mark-color);
+    background-color: var(--dark-mark-background-color);
+}
+
+html.dark kbd {
+    background-color: var(--dark-deep-background-color);
+    border: 1px solid var(--dark-border-color);
+    box-shadow: inset 0 -0.1em 0 var(--dark-border-color);
+}
+
 @media (prefers-color-scheme: dark) {
     html:not(.light) {
         background-color: var(--dark-background-color);
@@ -307,6 +346,17 @@ html.dark ins-lines {
     html:not(.light) ins-lines {
         background-color: var(--dark-ins-background-color);
         color: var(--dark-ins-color);
+    }
+
+    html:not(.light) mark {
+        color: var(--dark-mark-color);
+        background-color: var(--dark-mark-background-color);
+    }
+
+    html:not(.light) kbd {
+        background-color: var(--dark-deep-background-color);
+        border: 1px solid var(--dark-border-color);
+        box-shadow: inset 0 -0.1em 0 var(--dark-border-color);
     }
 }
 
