--- a/assets/main.css
+++ b/assets/main.css
@@ -56,6 +56,33 @@ main {
     margin-right: auto;
 }
 
+code-block,
+blockquote,
+dl,
+ol,
+p,
+pre,
+samp,
+ul {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
+
+li {
+    margin-top: 0.25em;
+    margin-bottom: 0.25em;
+}
+
+dt {
+    margin-top: 0.25em;
+    font-style: italic;
+    font-weight: bold;
+}
+
+dd {
+    margin-bottom: 0.25em;
+}
+
 code,
 code-block,
 pre,
@@ -83,8 +110,6 @@ pre,
 samp {
     font-size: calc(var(--monospace-size) * 0.9);
     width: 100%;
-    margin-top: 1em;
-    margin-bottom: 1em;
 }
 
 code-block,
@@ -149,6 +174,8 @@ h6 {
     position: relative;
 }
 
+/* PARAGRAPHS ANCHORS */
+
 .para {
     cursor: pointer;
     font-weight: normal;
@@ -169,6 +196,8 @@ h6 {
 .para::before {
     content: "§";
 }
+
+/* SETTINGS MENU */
 
 #settings:not(.js) {
     display: none;
