--- a/assets/main.css
+++ b/assets/main.css
@@ -31,6 +31,8 @@
     --dark-a-hover-color: #afd7ff;
     --dark-mark-color: #ededa8;
     --dark-mark-background-color: #525230;
+
+    --indent: 3em;
 }
 
 html {
@@ -81,6 +83,29 @@ dt {
 
 dd {
     margin-bottom: 0.25em;
+}
+
+blockquote {
+    --border-thickness: 0.25em;
+    --left-pad: 0.5em;
+
+    position: relative;
+    padding: 0.25em 0 0.25em var(--left-pad);
+    margin-left: calc(var(--indent) - var(--border-thickness) - var(--left-pad));
+}
+
+blockquote::before {
+    position: absolute;
+    left: -2.5em;
+    top: -0.5em;
+    width: 2em;
+    height: 2em;
+
+    opacity: 0.5;
+    content: "";
+    display: inline-block;
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 code,
@@ -205,7 +230,7 @@ h6 {
 
 #settings {
     z-index: 999;
-    position: absolute;
+    position: fixed;
     display: inline-block;
     top: 1em;
     right: 1em;
@@ -241,6 +266,7 @@ html:not(.light) #light-theme-icon {
 /* BEGIN LIGHT THEME */
 
 html:not(.dark) {
+    border-left: var(--border-thickness) solid var(--light-border-color);
     background-color: var(--light-background-color);
     color: var(--light-text-color);
 }
@@ -280,6 +306,14 @@ html:not(.dark) kbd {
     background-color: var(--light-deep-background-color);
     border: 1px solid var(--light-border-color);
     box-shadow: inset 0 -0.1em 0 var(--light-border-color);
+}
+
+html:not(.dark) blockquote {
+    border-left: var(--border-thickness) solid var(--dark-border-color);
+}
+
+html:not(.dark) blockquote::before {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="black"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7.17 17c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94zm10 0c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94z"/></svg>');
 }
 
 /* END LIGHT THEME */
@@ -336,6 +370,14 @@ html.dark kbd {
     box-shadow: inset 0 -0.1em 0 var(--dark-border-color);
 }
 
+html.dark blockquote {
+    border-left: var(--border-thickness) solid var(--dark-border-color);
+}
+
+html.dark blockquote::before {
+    background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="%23f0f0f0"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7.17 17c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94zm10 0c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94z"/></svg>');
+}
+
 @media (prefers-color-scheme: dark) {
     html:not(.light) {
         background-color: var(--dark-background-color);
@@ -386,6 +428,14 @@ html.dark kbd {
         background-color: var(--dark-deep-background-color);
         border: 1px solid var(--dark-border-color);
         box-shadow: inset 0 -0.1em 0 var(--dark-border-color);
+    }
+
+    html:not(.light) blockquote {
+        border-left: var(--border-thickness) solid var(--dark-border-color);
+    }
+
+    html:not(.light) blockquote::before {
+        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="%23f0f0f0"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M7.17 17c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1H5c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94zm10 0c.51 0 .98-.29 1.2-.74l1.42-2.84c.14-.28.21-.58.21-.89V8c0-.55-.45-1-1-1h-4c-.55 0-1 .45-1 1v4c0 .55.45 1 1 1h2l-1.03 2.06c-.45.89.2 1.94 1.2 1.94z"/></svg>');
     }
 }
 
