--- a/assets/main.css
+++ b/assets/main.css
@@ -15,6 +15,7 @@ html {
     --light-ins-color: #17752d;
     --light-ins-background-color: #e4faea;
     --light-para-color: rgb(10, 73, 136);
+    --light-mark-color: black;
     --light-mark-background-color: #ffff85;
     --light-blockquote-border-color: #707070;
     --light-blockquote-background-color: #f0f0f0;
@@ -97,6 +98,7 @@ html {
         --ins-color: var(--light-ins-color);
         --ins-background-color: var(--light-ins-background-color);
         --para-color: var(--light-para-color);
+        --mark-color: var(--light-mark-color);
         --mark-background-color: var(--light-mark-background-color);
         --blockquote-border-color: var(--light-blockquote-border-color);
         --blockquote-background-color: var(--light-blockquote-background-color);
@@ -136,6 +138,7 @@ html {
         --ins-color: var(--dark-ins-color);
         --ins-background-color: var(--dark-ins-background-color);
         --para-color: var(--dark-para-color);
+        --mark-color: var(--dark-mark-color);
         --mark-background-color: var(--dark-mark-background-color);
         --blockquote-border-color: var(--dark-blockquote-border-color);
         --blockquote-background-color: var(--dark-blockquote-background-color);
@@ -174,6 +177,7 @@ html.light {
     --ins-color: var(--light-ins-color);
     --ins-background-color: var(--light-ins-background-color);
     --para-color: var(--light-para-color);
+    --mark-color: var(--light-mark-color);
     --mark-background-color: var(--light-mark-background-color);
     --blockquote-border-color: var(--light-blockquote-border-color);
     --blockquote-background-color: var(--light-blockquote-background-color);
@@ -211,6 +215,7 @@ html.dark {
     --ins-color: var(--dark-ins-color);
     --ins-background-color: var(--dark-ins-background-color);
     --para-color: var(--dark-para-color);
+    --mark-color: var(--dark-mark-color);
     --mark-background-color: var(--dark-mark-background-color);
     --blockquote-border-color: var(--dark-blockquote-border-color);
     --blockquote-background-color: var(--dark-blockquote-background-color);
@@ -487,6 +492,7 @@ kbd {
 }
 
 mark {
+    color: var(--mark-color);
     background-color: var(--mark-background-color);
 }
 
